force-app/main/default/objects/Combined_Funnel__c/Combined_Funnel__c.object-meta.xml
<CustomObject>
    <description>Used to track combined SaaS and Billing onboarding/activation funnels for an Account.</description>
    <label>Combined Funnel</label>
    <nameField>
        <label>Combined Funnel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Combined Funnels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>