force-app/main/default/objects/Combined_Funnel__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Combined Funnels</relationshipLabel>
    <relationshipName>Combined_Funnels</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>