force-app/main/default/objects/Combined_Funnel__c/fields/Account_Billing_State__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_State__c</fullName>
    <description>Billing State from the Account related to the CF.</description>
    <formula>Account__r.BillingState</formula>
    <inlineHelpText>Billing State from the Account related to the CF.</inlineHelpText>
    <label>Account Billing State</label>
    <type>Text</type>
</CustomField>