force-app/main/default/objects/Combined_Funnel__c/fields/Account_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Customer_Type__c</fullName>
    <description>Reference to Account Customer Type.</description>
    <formula>TEXT(Account__r.Customer_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Customer Type</label>
    <type>Text</type>
</CustomField>