force-app/main/default/objects/Combined_Funnel__c/fields/Active_Student_Activity_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_Student_Activity_Count__c</fullName>
    <description>Reference to School Object field - Active_Student_Action_Count__c</description>
    <formula>Account__r.School_Object__r.Active_Student_Action_Count__c</formula>
    <inlineHelpText>The total number of activities recorded against currently active students, only counting activities since 14 days prior to closed-won.</inlineHelpText>
    <label>Active Student Activity Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>