force-app/main/default/objects/Combined_Funnel__c/fields/Active_Student_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_Student_Count__c</fullName>
    <description>Reference to School Object field - Active_Student_Count__c</description>
    <formula>Account__r.School_Object__r.Active_Student_Count__c</formula>
    <inlineHelpText>Number of Active Students the center has.</inlineHelpText>
    <label>Active Student Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>