force-app/main/default/objects/Combined_Funnel__c/fields/Active_Student_Enrollment_Percent_Met__c.field-meta.xml
<CustomField>
    <fullName>Active_Student_Enrollment_Percent_Met__c</fullName>
    <description>Date the Active Student Enrollment Percent became greater than or equal to 90%. Used to capture the date outside of the funnel automation logic that only captures the Student Enrollment Threshold date after the Onboarding Training Call occurs. Updated by sfdc flow called: CF - Active Student Enrollment Percent Met Date</description>
    <formula>Account__r.School_Object__r.Active_Student_Enrollment_Percent_Met__c</formula>
    <inlineHelpText>Date the Active Student Enrollment Percent became greater than or equal to 90%. From the School Object related to the Combined Funnel record.</inlineHelpText>
    <label>Active Student Enrollment Percent Met</label>
    <type>Date</type>
</CustomField>