force-app/main/default/objects/Combined_Funnel__c/fields/Active_Students_1_Bill_Plans_Applied__c.field-meta.xml
<CustomField>
    <fullName>Active_Students_1_Bill_Plans_Applied__c</fullName>
    <formula>Account__r.School_Object__r.Active_Students_1_Bill_Plans_Applied__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Students 1+ Bill Plans Applied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>