force-app/main/default/objects/Combined_Funnel__c/fields/Active_Students_Parents_Activated__c.field-meta.xml
<CustomField>
    <fullName>Active_Students_Parents_Activated__c</fullName>
    <description>Reference to School Object field - Active_Students_Parents_Activated__c</description>
    <formula>Account__r.School_Object__r.Active_Students_Parents_Activated__c</formula>
    <inlineHelpText>The number of currently active students that have at least one parent activated</inlineHelpText>
    <label>Active Students Parents Activated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>