force-app/main/default/objects/Combined_Funnel__c/fields/Active_Students_with_1_Guardian_Added__c.field-meta.xml
<CustomField>
    <fullName>Active_Students_with_1_Guardian_Added__c</fullName>
    <formula>Account__r.School_Object__r.Active_Students_with_1_Guardian_Added__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The percent of active students with an added parent. Must be 80%.</inlineHelpText>
    <label>Active Students with 1+ Guardian Added</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>