force-app/main/default/objects/Combined_Funnel__c/fields/Active_Students_with_Bill_Paid_Online__c.field-meta.xml
<CustomField>
    <fullName>Active_Students_with_Bill_Paid_Online__c</fullName>
    <formula>Account__r.School_Object__r.Active_Students_with_One_Payment_Ratio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>% of total active students who&apos;s payers have paid online. Must be 50%.</inlineHelpText>
    <label>Active Students with Bill Paid Online</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>