force-app/main/default/objects/Combined_Funnel__c/fields/Active_Students_with_Bills_Sent__c.field-meta.xml
<CustomField>
    <fullName>Active_Students_with_Bills_Sent__c</fullName>
    <formula>Account__r.School_Object__r.Active_Students_with_One_Bill_Ratio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates current % of active students on billing plan with one bill sent + one time charges sent. Must be 90%.</inlineHelpText>
    <label>Active Students with Bills Sent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>