force-app/main/default/objects/Combined_Funnel__c/fields/Active_Students_with_Charges_Set_Up__c.field-meta.xml
<CustomField>
    <fullName>Active_Students_with_Charges_Set_Up__c</fullName>
    <formula>Account__r.School_Object__r.Active_Students_with_Billing_Ratio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates current % of active students with bill plans set up and/or one time charges sent. Must be 70%.</inlineHelpText>
    <label>Active Students with Charges Set Up</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>