force-app/main/default/objects/Combined_Funnel__c/fields/Active_Students_with_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Active_Students_with_Payment_Method__c</fullName>
    <formula>Account__r.School_Object__r.Active_Students_with_Payment_Method__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates % of active students who&apos;s payer has a payment method saved. Must be 30%.</inlineHelpText>
    <label>Active Students with Payment Method</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>