force-app/main/default/objects/Combined_Funnel__c/fields/Active_Students_with_Two_Payments_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Active_Students_with_Two_Payments_Ratio__c</fullName>
    <formula>Account__r.School_Object__r.Active_Students_with_Two_Payments_Ratio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Students with Two Payments Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>