force-app/main/default/objects/Combined_Funnel__c/fields/Activities_Messages_in_Last_7_Days__c.field-meta.xml
<CustomField>
    <fullName>Activities_Messages_in_Last_7_Days__c</fullName>
    <formula>Account__r.School_Object__r.Activities_Messages_in_Last_7_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Includes all activities and messages logged for active students. Includes shared files.</inlineHelpText>
    <label>Activities &amp; Messages in Last 7 Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>