force-app/main/default/objects/Combined_Funnel__c/fields/Activities_Per_Student__c.field-meta.xml
<CustomField>
    <fullName>Activities_Per_Student__c</fullName>
    <description>Activities Per Student field from the school object associated to the account (previously populated as actions per student but field has been repurposed to show activities, not actions. Label and API differences match school object field.</description>
    <formula>Account__r.School_Object__r.Actions_Per_Student__c</formula>
    <inlineHelpText>Based on activities 14 days prior to closed won and not populated/will be blank until student added threshold is met.</inlineHelpText>
    <label>Activities Per Student</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>