force-app/main/default/objects/Combined_Funnel__c/fields/Activity_Threshold_Met_Date__c.field-meta.xml
<CustomField>
    <fullName>Activity_Threshold_Met_Date__c</fullName>
    <description>Activity Threshold Met Date from the school object associated to the account</description>
    <formula>Account__r.School_Object__r.Activity_Threshold_Met_Date__c</formula>
    <inlineHelpText>Date when the Activity Threshold was met.</inlineHelpText>
    <label>Activity Threshold Met Date</label>
    <type>Date</type>
</CustomField>