force-app/main/default/objects/Combined_Funnel__c/fields/Add_Parents_Threshold_Met__c.field-meta.xml
<CustomField>
    <fullName>Add_Parents_Threshold_Met__c</fullName>
    <description>Add Parents Threshold Met from the School Object related to the CF&apos;s Account.</description>
    <formula>Account__r.School_Object__r.Add_Parents_Threshold_Met__c</formula>
    <inlineHelpText>Add Parents Threshold Met from the School Object related to the CF&apos;s Account.</inlineHelpText>
    <label>Add Parents Threshold Met</label>
    <type>Date</type>
</CustomField>