force-app/main/default/objects/Combined_Funnel__c/fields/Add_Roster_By__c.field-meta.xml
<CustomField>
    <fullName>Add_Roster_By__c</fullName>
    <description>Mapped to SaaS Onboarding in flow.
04/10/23 - Flagged to be deprecated (Sprint 5 - 2023)</description>
    <inlineHelpText>When the center should have their roster added.</inlineHelpText>
    <label>x_Add Roster By</label>
    <type>Date</type>
</CustomField>