force-app/main/default/objects/Combined_Funnel__c/fields/Add_Staff_By__c.field-meta.xml
<CustomField>
    <fullName>Add_Staff_By__c</fullName>
    <description>Mapped to SaaS Onboarding in flow.</description>
    <inlineHelpText>When should they add staff by?</inlineHelpText>
    <label>Add Staff By</label>
    <type>Date</type>
</CustomField>