force-app/main/default/objects/Combined_Funnel__c/fields/ADMIN_FTS_Owner_User_ID__c.field-meta.xml
<CustomField>
    <fullName>ADMIN_FTS_Owner_User_ID__c</fullName>
    <description>For transferring record ownership. Admin use only.</description>
    <formula>FTS_Owner__r.Id</formula>
    <inlineHelpText>For transferring record ownership. Admin use only.</inlineHelpText>
    <label>ADMIN_FTS Owner User ID</label>
    <type>Text</type>
</CustomField>