force-app/main/default/objects/Combined_Funnel__c/fields/ADMIN_SaaS_CW_Opp_ID__c.field-meta.xml
<CustomField>
    <fullName>ADMIN_SaaS_CW_Opp_ID__c</fullName>
    <description>For admin data upload purposes only.</description>
    <formula>SaaS_CW_Opportunity__r.Id</formula>
    <label>ADMIN_SaaS CW Opp ID</label>
    <type>Text</type>
</CustomField>