force-app/main/default/objects/Combined_Funnel__c/fields/ADMIN_Tag__c.field-meta.xml
<CustomField>
    <fullName>ADMIN_Tag__c</fullName>
    <description>Used for tagging records in data update jobs.</description>
    <label>ADMIN Tag</label>
    <length>50</length>
    <type>Text</type>
</CustomField>