force-app/main/default/objects/Combined_Funnel__c/fields/AE_Conversation_Notes__c.field-meta.xml
<CustomField>
    <fullName>AE_Conversation_Notes__c</fullName>
    <label>AE Conversation Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>