force-app/main/default/objects/Combined_Funnel__c/fields/AE_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>AE_Next_Steps__c</fullName>
    <label>AE Next Steps</label>
    <type>TextArea</type>
</CustomField>