force-app/main/default/objects/Combined_Funnel__c/fields/AE_Next_Steps_From_Opp__c.field-meta.xml
<CustomField>
    <fullName>AE_Next_Steps_From_Opp__c</fullName>
    <formula>SaaS_CW_Opportunity__r.NextStep</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AE Next Steps</label>
    <type>Text</type>
</CustomField>