force-app/main/default/objects/Combined_Funnel__c/fields/AE_Owner__c.field-meta.xml
<CustomField>
    <fullName>AE_Owner__c</fullName>
    <description>Account Executive mapped from the Account Object. Used for reporting and performance metrics without affecting rep attribution when the AE that closed the CW Opp is inactive.</description>
    <formula>Account__r.AE_Owner__r.FirstName &amp; &quot; &quot; &amp; Account__r.AE_Owner__r.LastName</formula>
    <inlineHelpText>Account Executive mapped from the Account Object</inlineHelpText>
    <label>AE Owner</label>
    <type>Text</type>
</CustomField>