force-app/main/default/objects/Combined_Funnel__c/fields/AE_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>AE_Owner_Role__c</fullName>
    <description>AE Owner Role is mapped from the AE Owner on the Account. Used for reports and Dashboards based on teams</description>
    <formula>Account__r.AE_Owner__r.UserRole.Name</formula>
    <inlineHelpText>AE Owner Role is mapped from the AE Owner on the Account.</inlineHelpText>
    <label>AE Owner Role</label>
    <type>Text</type>
</CustomField>