force-app/main/default/objects/Combined_Funnel__c/fields/AE_Post_CW_Check_In_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>AE_Post_CW_Check_In_Completed_Date__c</fullName>
    <description>Mapped from the Saas Primary Contact&apos;s record - AE Post-CW Check-In Completed Date</description>
    <formula>SaaS_Primary_Contact__r.AE_Post_CW_Check_In_Completed_Date__c</formula>
    <inlineHelpText>Mapped from the Saas Primary Contact&apos;s record - AE Post-CW Check-In Completed Date</inlineHelpText>
    <label>AE Post-CW Check-In Completed Date</label>
    <type>Date</type>
</CustomField>