force-app/main/default/objects/Combined_Funnel__c/fields/AE_Post_CW_Check_In_Scheduled_Date_c__c.field-meta.xml
<CustomField>
    <fullName>AE_Post_CW_Check_In_Scheduled_Date_c__c</fullName>
    <description>Mapped from the Saas Primary Contact&apos;s AE Post CW Check in scheduled</description>
    <formula>SaaS_Primary_Contact__r.AE_Post_CW_Check_In_Scheduled_Date__c</formula>
    <inlineHelpText>Mapped from the Saas Primary Contact&apos;s AE Post CW Check in scheduled</inlineHelpText>
    <label>AE_Post_CW_Check_In_Scheduled_Date__c</label>
    <type>Date</type>
</CustomField>