force-app/main/default/objects/Combined_Funnel__c/fields/Authority__c.field-meta.xml
<CustomField>
    <fullName>Authority__c</fullName>
    <description>Authority field from the SaaS CW Opportunity related to the CF.</description>
    <formula>SaaS_CW_Opportunity__r.Authority__c</formula>
    <inlineHelpText>Authority information captured by Sales from the SaaS CW Opportunity related to the CF. Answers to these questions: Are we speaking with a decision maker or an influencer? If we’re speaking with an influencer, can they help us better understand the school/org structure?</inlineHelpText>
    <label>Authority</label>
    <type>Text</type>
</CustomField>