force-app/main/default/objects/Combined_Funnel__c/fields/Bill_Plans_or_Charges_Applied__c.field-meta.xml
<CustomField>
    <fullName>Bill_Plans_or_Charges_Applied__c</fullName>
    <formula>Account__r.School_Object__r.Bill_Plans_or_Charges_Applied__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Bill plans set up + one time charges sent. Must be &gt;1.</inlineHelpText>
    <label>Bill Plans or Charges Applied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>