force-app/main/default/objects/Combined_Funnel__c/fields/Billing_Activated_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Activated_Date__c</fullName>
    <description>Billing Activation Date from the School Object related to the CF&apos;s Account.</description>
    <formula>Account__r.School_Object__r.Billing_Activation_Date_2024__c</formula>
    <inlineHelpText>Billing Activation Date from the School Object related to the CF&apos;s Account.</inlineHelpText>
    <label>Billing Activated Date</label>
    <type>Date</type>
</CustomField>