force-app/main/default/objects/Combined_Funnel__c/fields/Billing_Activation_Funnel_Stage_Value__c.field-meta.xml
<CustomField>
    <fullName>Billing_Activation_Funnel_Stage_Value__c</fullName>
    <formula>TEXT(Account__r.School_Object__r.Billing_Activation_Funnel_Value_2024__c)
&amp;&apos; - &apos; &amp;
TEXT(Account__r.School_Object__r.Billing_Activation_Funnel_Stage_2024__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Activation Funnel Stage Value</label>
    <type>Text</type>
</CustomField>