force-app/main/default/objects/Combined_Funnel__c/fields/Billing_Activation_M0_Payer_Attach_Rate__c.field-meta.xml
<CustomField>
    <fullName>Billing_Activation_M0_Payer_Attach_Rate__c</fullName>
    <description>Billing Activation - M0 payer attach rate . Pulled from the data warehouse field: billing_activation_m0_payer_attach_rate__c</description>
    <formula>Account__r.School_Object__r.Billing_Activation_M0_Payer_Attach_Rate__c</formula>
    <inlineHelpText>Billing Activation - M0 payer attach rate . Pulled from the data warehouse field: billing_activation_m0_payer_attach_rate__c on school object.</inlineHelpText>
    <label>Billing Activation M0 Payer Attach Rate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>