force-app/main/default/objects/Combined_Funnel__c/fields/Billing_Activation_Override__c.field-meta.xml
<CustomField>
    <fullName>Billing_Activation_Override__c</fullName>
    <description>Mapped to Billing Onboarding in flow.</description>
    <label>Billing Activation Override</label>
    <length>50</length>
    <type>Text</type>
</CustomField>