force-app/main/default/objects/Combined_Funnel__c/fields/Billing_Activation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Activation_Start_Date__c</fullName>
    <formula>Account__r.Billing_Activation_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Activation Start Date</label>
    <type>Date</type>
</CustomField>