force-app/main/default/objects/Combined_Funnel__c/fields/Billing_AE_Post_CW_Check_In_Scheduled_Dt__c.field-meta.xml
<CustomField>
    <fullName>Billing_AE_Post_CW_Check_In_Scheduled_Dt__c</fullName>
    <description>Mapped from the Billing Primary Contact&apos;s record - Billing AE Post-CW Check-In scheduled date</description>
    <formula>Billing_Primary_Contact__r.Billing_AE_Post_CW_Check_In_Scheduled_Da__c</formula>
    <inlineHelpText>Mapped from the Billing Primary Contact&apos;s record - Billing AE Post-CW Check-In scheduled date</inlineHelpText>
    <label>Billing AE Post-CW Check-In Scheduled Dt</label>
    <type>Date</type>
</CustomField>