force-app/main/default/objects/Combined_Funnel__c/fields/Billing_Call_or_Webinar_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Call_or_Webinar_Date__c</fullName>
    <description>Mapped from CW Opp in flow from Billing 1:1 Onboarding Call date field.</description>
    <label>Billing Call or Webinar Date</label>
    <type>Date</type>
</CustomField>