force-app/main/default/objects/Combined_Funnel__c/fields/Billing_Call_or_Webinar_Status__c.field-meta.xml
<CustomField>
    <fullName>Billing_Call_or_Webinar_Status__c</fullName>
    <label>Billing Call or Webinar Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Billing_Call_Status</valueSetName>
    </valueSet>
</CustomField>