force-app/main/default/objects/Combined_Funnel__c/fields/Billing_Check_In_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Check_In_Call_Date__c</fullName>
    <description>Maps to Billing Call 2 on related Billing Onboarding record in flow.
04/10/23 - Flagged to be deprecated (Sprint 5 - 2023)</description>
    <label>x_Billing Check-In Call Date</label>
    <type>Date</type>
</CustomField>