force-app/main/default/objects/Combined_Funnel__c/fields/Billing_Check_In_Call_Status__c.field-meta.xml
<CustomField>
    <fullName>Billing_Check_In_Call_Status__c</fullName>
    <description>04/10/23 - Flagged to be deprecated (Sprint 5 - 2023)</description>
    <label>x_Billing Check-In Call Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Billing_Call_Status</valueSetName>
    </valueSet>
</CustomField>