force-app/main/default/objects/Combined_Funnel__c/fields/Billing_Contact_Most_Recent_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Most_Recent_Sequence__c</fullName>
    <description>Displays the Most Recent Sequence Entered value from the Billing Primary Contact associated with the Combined Funnel.</description>
    <formula>Billing_Primary_Contact__r.Most_Recent_Cadence_Entered__c</formula>
    <inlineHelpText>Displays the Most Recent Sequence Entered value from the Billing Primary Contact associated with the Combined Funnel.</inlineHelpText>
    <label>Billing Contact - Most Recent Sequence</label>
    <type>Text</type>
</CustomField>