force-app/main/default/objects/Combined_Funnel__c/fields/Billing_Conversation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Billing_Conversation_Notes__c</fullName>
    <description>Mapped to Billing Conversation Notes on Billing Onboarding in field update flow.</description>
    <label>Billing Conversation Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>