force-app/main/default/objects/Combined_Funnel__c/fields/Billing_CSAT__c.field-meta.xml
<CustomField>
    <fullName>Billing_CSAT__c</fullName>
    <formula>Billing_Primary_Contact__r.Wootric__Current_CSAT_score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing CSAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>