force-app/main/default/objects/Combined_Funnel__c/fields/Billing_Customer_Comfort_Level__c.field-meta.xml
<CustomField>
    <fullName>Billing_Customer_Comfort_Level__c</fullName>
    <description>Manually populated on the Combined Funnel by Onboarding/Activation reps - mapped to Account in PB called: CF - Update Account Fields From Combined Funnel.
04/10/23 - Flagged to be deprecated (Sprint 5 - 2023)</description>
    <inlineHelpText>The customer&apos;s comfort level with Billing Onboarding needs.</inlineHelpText>
    <label>x_Billing Customer Comfort Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Onboarding_Comfort_Level</valueSetName>
    </valueSet>
</CustomField>