force-app/main/default/objects/Combined_Funnel__c/fields/Billing_CW_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Billing_CW_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing CW Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Combined Funnels (Billing CW Opportunity)</relationshipLabel>
    <relationshipName>Combined_Funnels1</relationshipName>
    <type>Lookup</type>
</CustomField>