force-app/main/default/objects/Combined_Funnel__c/fields/Billing_CW_W2_Not_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Billing_CW_W2_Not_Eligible__c</fullName>
    <description>Formula field that pulls the value from the field W2 Not Eligible from the Closed Won Billing Opportunity</description>
    <formula>If(
Billing_CW_Opportunity__r.W2_Not_Eligible__c = True,
True,
False
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field that pulls the value from the field W2 Not Eligible from the Closed Won Billing Opportunity</inlineHelpText>
    <label>Billing CW W2 Not Eligible</label>
    <type>Checkbox</type>
</CustomField>