force-app/main/default/objects/Combined_Funnel__c/fields/Billing_Dropout_Reason__c.field-meta.xml
<CustomField>
    <fullName>Billing_Dropout_Reason__c</fullName>
    <label>Billing Opt Out Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Billing_Closed_Lost_Reason</valueSetName>
    </valueSet>
</CustomField>