force-app/main/default/objects/Combined_Funnel__c/fields/Billing_Intervals__c.field-meta.xml
<CustomField>
    <fullName>Billing_Intervals__c</fullName>
    <description>Mapped from CW Opp in flow.</description>
    <label>Billing Intervals</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Billing_Intervals</valueSetName>
    </valueSet>
</CustomField>