force-app/main/default/objects/Combined_Funnel__c/fields/Billing_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Billing_Next_Steps__c</fullName>
    <description>Mapped to Customer Next Steps on Billing Onboardings in flow.
04/10/23 - Flagged to be deprecated (Sprint 5 - 2023)</description>
    <inlineHelpText>Short snapshot of what the billing next steps are for the customer.</inlineHelpText>
    <label>x_Billing Next Steps</label>
    <type>TextArea</type>
</CustomField>