force-app/main/default/objects/Combined_Funnel__c/fields/Billing_Onboarding_Eligible_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Onboarding_Eligible_Date__c</fullName>
    <description>Date the school became Billing Onboarding eligible. Populated through the nightly data warehouse sync</description>
    <formula>Account__r.School_Object__r.Billing_Onboarding_Eligible_Date__c</formula>
    <inlineHelpText>School Object data - Populated through the nightly data warehouse sync</inlineHelpText>
    <label>Billing Onboarding Eligible Date</label>
    <type>Date</type>
</CustomField>